config/iam/protected-resources/gatewayclasses.yaml
---
apiVersion: iam.miloapis.com/v1alpha1
kind: ProtectedResource
metadata:
  name: gateway.networking.k8s.io-gatewayclass
spec:
  serviceRef:
    name: "gateway.networking.k8s.io"
  kind: GatewayClass
  plural: gatewayclasses
  singular: gatewayclass
  permissions:
    - list
    - get
    - watch
  subresources:
    - name: status
      permissions:
        - get
        - update
        - patch
  parentResources:
    - apiGroup: resourcemanager.miloapis.com
      kind: Project
