config/iam/protected-resources/gateway.yaml
---
apiVersion: iam.miloapis.com/v1alpha1
kind: ProtectedResource
metadata:
  name: gateway.networking.k8s.io-gateway
spec:
  serviceRef:
    name: "gateway.networking.k8s.io"
  kind: Gateway
  plural: gateways
  singular: gateway
  permissions:
    - list
    - get
    - watch
    - create
    - update
    - patch
    - delete
  parentResources:
    - apiGroup: resourcemanager.miloapis.com
      kind: Project
