config/iam/protected-resources/backendtrafficpolicies.yaml
---
apiVersion: iam.miloapis.com/v1alpha1
kind: ProtectedResource
metadata:
  name: gateway.envoyproxy.io-backendtrafficpolicies
spec:
  serviceRef:
    name: "gateway.envoyproxy.io"
  kind: BackendTrafficPolicy
  plural: backendtrafficpolicies
  singular: backendtrafficpolicy
  permissions:
    - list
    - get
    - watch
    - create
    - update
    - patch
    - delete
  subresources:
    - name: status
      permissions:
        - get
        - update
        - patch
  parentResources:
    - apiGroup: resourcemanager.miloapis.com
      kind: Project
