config/iam/protected-resources/httpproxies.yaml
---
apiVersion: iam.miloapis.com/v1alpha1
kind: ProtectedResource
metadata:
  name: networking.datumapis.com-httpproxy
spec:
  serviceRef:
    name: "networking.datumapis.com"
  kind: HTTPProxy
  plural: httpproxies
  singular: httpproxy
  permissions:
    - list
    - get
    - watch
    - create
    - update
    - patch
    - delete
  subresources:
    - name: status
      permissions:
        - get
        - update
        - patch
  parentResources:
    - apiGroup: resourcemanager.miloapis.com
      kind: Project
