config/iam/protected-resources/httproute.yaml
---
apiVersion: iam.miloapis.com/v1alpha1
kind: ProtectedResource
metadata:
  name: gateway.networking.k8s.io-httproute
spec:
  serviceRef:
    name: "gateway.networking.k8s.io"
  kind: HTTPRoute
  plural: httproutes
  singular: httproute
  permissions:
    - list
    - get
    - watch
    - create
    - update
    - patch
    - delete
  parentResources:
    - apiGroup: resourcemanager.miloapis.com
      kind: Project
