config/iam/protected-resources/securitypolicies.yaml
---
apiVersion: iam.miloapis.com/v1alpha1
kind: ProtectedResource
metadata:
  name: gateway.envoyproxy.io-securitypolicies
spec:
  serviceRef:
    name: "gateway.envoyproxy.io"
  kind: SecurityPolicy
  plural: securitypolicies
  singular: securitypolicy
  permissions:
    - list
    - get
    - watch
    - create
    - update
    - patch
    - delete
  subresources:
    - name: status
      permissions:
        - get
        - update
        - patch
  parentResources:
    - apiGroup: resourcemanager.miloapis.com
      kind: Project
